Migrate tests to JUnit5
Squashed commit of the following:

commit 5567afe642eb3fd13dc29bfe61c377076795f52f
Author: git-client-user <git-client-user@example.com>
Date:   Tue Sep 9 09:28:13 2025 +0200

    Do not create temporary files in project root

commit d95a472215f9c4721b033dd9e0e160955b5737aa
Merge: 4231ffe0 3a4021b3
Author: Mark Waite <mark.earl.waite@gmail.com>
Date:   Mon Sep 8 06:39:21 2025 -0600

    Merge branch 'master' into migrate_to_junit5

commit 4231ffe04ff4ad8ea70e8a808ad1c9457aef1583
Author: git-client-user <git-client-user@example.com>
Date:   Sat Sep 6 18:28:55 2025 -0600

    Fix code formatting

    Spotless

commit 357ada83d0311fee52e253eaf17742d82608a7a0
Author: Mark Waite <mark.earl.waite@gmail.com>
Date:   Sat Sep 6 17:17:42 2025 -0600

    Skip testSparseCheckoutWithCliGitLFS on CI

    Unreliable due to GitHub message

commit e26556f3899b2559b24e0c27a9e679387c287b92
Author: Mark Waite <mark.earl.waite@gmail.com>
Date:   Sat Sep 6 12:34:13 2025 -0600

    Improve JMH sample repository choices

    Include a wider range of small repositories in order to be more likely
    to detect shifts in the turning point where command line git performs
    better than JGit.

    Current data shows that JGit is faster than command line git for
    repositories up to 8 MB.  Command line git is dramatically faster than
    JGit for the 450 MB repository that is the largest repository used in
    the test.

commit f908818b80421c6559914591e1a0f7bb244fb5a4
Author: Mark Waite <mark.earl.waite@gmail.com>
Date:   Sat Sep 6 07:58:11 2025 -0600

    Ban JUnit 4 imports

commit 9f25a4e7559a42cb36a37ef6d07a356d2e50c592
Author: Mark Waite <mark.earl.waite@gmail.com>
Date:   Sat Sep 6 07:56:20 2025 -0600

    Correct comments in FolderForBenchmark

commit b3534e1075d9c6230d0cac2f4049067ce5140c53
Author: Mark Waite <mark.earl.waite@gmail.com>
Date:   Sat Sep 6 07:23:15 2025 -0600

    Use repository matching comment - cairoshell

commit 73adf269340a81589430bc7ed8f651